--- a/mplayer/input.conf
+++ b/mplayer/input.conf
@@ -1,16 +1,12 @@
-# configure seeking behavior
-# small seek: 3 seconds
-RIGHT seek +3
-LEFT seek -3
+##
+## MPlayer input control file
+##
 
-# medium seek: 10 seconds
-UP seek +10
-DOWN seek -10
-
-# large seek: 1 minute
-PGUP seek +60
-PGDOWN seek -60
-
-# extra-large seek: 5 minutes
-#HOME seek +300
-#END seek -300
+RIGHT seek +5
+LEFT seek -5
+- audio_delay 0.100
++ audio_delay -0.100
+j seek -10
+k seek +10
+h seek -30
+l seek +30
