more mplayer key bindings; prettier progress bar

--- a/mplayer/input.conf
+++ b/mplayer/input.conf
@@ -6,7 +6,9 @@ RIGHT seek +5
 LEFT seek -5
 - audio_delay 0.100
 + audio_delay -0.100
-j seek -10
+h seek -2
+j seek +2
+g seek -10
 k seek +10
-h seek -30
+f seek -30
 l seek +30
