mplayer audio sync keys

--- a/mplayer/input.conf
+++ b/mplayer/input.conf
@@ -4,8 +4,12 @@
 
 RIGHT seek +5
 LEFT seek -5
-- audio_delay 0.100
-+ audio_delay -0.100
+q audio_delay +0.500
+w audio_delay -0.500
+a audio_delay +0.050
+s audio_delay -0.050
+z audio_delay +0.005
+x audio_delay -0.005
 h seek -2
 j seek +2
 g seek -10
