config files for most things

--- a/config/config.conf
+++ b/config/config.conf
@@ -1,8 +1,34 @@
+# configuration file for stone-tools
+# 
+
 [gentile]
-video_bitrate=4500
-local_file=sermon.ts
 url_paul=http://localhost/
+local_file=sermon.ts
 file_ext=pt
+video_bitrate=4500
 mplayer_stdout_file=mplayer_stdout
 mplayer_stderr_file=mplayer_stderr
+av_delay=-.3
+
+[disciple]
+teacher_ip=10.100.1.242
+remote_dir=/var/www
+nfs_dir=/teacher
+hdpvr_device=video0
+video_prefix=video_
+
+[teacher]
+video_dir=/var/www/
+video_prefix=video_
+
+[webapp]
+signals_dir=/var/www
+refresh_rate=3
+
+[paul]
+url_teacher=http://10.100.1.242/
+web_dir=/var/www
+sermon_dir=/sermons
+teacher_symlink=sermon_symlink
+fs_diff=0.5
 
