default.conf now has an option fo paul's reported ip, i.e. the ip he reports in the config file as where to get the sermon file from

--- a/config/default.conf
+++ b/config/default.conf
@@ -28,6 +28,7 @@ refresh_rate=3
 
 [paul]
 url_teacher=http://10.100.1.242/
+reported_ip=10.100.52.201
 web_dir=/var/www
 sermon_dir=/sermons
 teacher_symlink=sermon_symlink
