--- a/config/default.conf
+++ b/config/default.conf
@@ -8,6 +8,8 @@ video_bitrate=4500
 mplayer_stdout_file=mplayer_stdout
 mplayer_stderr_file=mplayer_stderr
 av_delay=-.3
+max_av_correction=3
+osdlevel=0
 
 [disciple]
 teacher_ip=10.100.1.242
