add/rm settings in config; finishing disciple state machines

--- a/config/default.conf
+++ b/config/default.conf
@@ -14,9 +14,11 @@ osdlevel=0
 [disciple]
 teacher_ip=10.100.1.242
 remote_dir=/var/www
-nfs_dir=/teacher
+video_dir=/var/www/
 hdpvr_device=video0
 video_prefix=video_
+xmlrpcip=localhost
+xmlrpcport=8800
 
 [teacher]
 video_dir=/var/www/
