changed way states are checked in Disciple.run; now we don't have to check for multiple possible states

--- a/config/default.conf
+++ b/config/default.conf
@@ -15,7 +15,7 @@ osdlevel=0
 teacher_ip=10.100.1.242
 remote_dir=/var/www
 video_dir=/var/www/
-hdpvr_device=video0
+hdpvr_device=/dev/video0
 video_prefix=video_
 xmlrpcip=localhost
 xmlrpcport=8800
